--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<p>Register</p>
+<p>Register&nbsp;(<a routerLink='/login'>Login</a>)</p>
 <form>
     <div class="form-group mx-sm-3 mb-2">
       <label for="inputUsername">Username</label>
