--- a/src/app/quiz-list/quiz-list.component.html
+++ b/src/app/quiz-list/quiz-list.component.html
@@ -1,4 +1,4 @@
-<p>Quizes (<a href="/quiz-new">new</a>)</p>
+<p>Quizes <span *ngIf="role === 'instructor'" >(<a routerLink="/quiz-new">new</a>)</span></p>
 
 
 
@@ -12,7 +12,7 @@
     <a routerLink="/question-list" [queryParams]="{quizId: quiz._id }">View questions</a>
     </div> <div *ngIf="role === 'student'" >
       <a routerLink="/answers-list" [queryParams]="{quizId: quiz._id }" style='margin:-10px'>Start a quiz</a>
-    </div> <div style='float:right;margin:-15px'><a routerLink="/quiz-update" [queryParams]="{id: quiz._id }" >Update</a>&nbsp;<a routerLink="/quiz-delete" [queryParams]="{id: quiz._id }" >Delete</a></div>
+    </div> <div *ngIf="role === 'instructor'" style='float:right;margin:-15px'><a routerLink="/quiz-update" [queryParams]="{id: quiz._id }" >Update</a>&nbsp;<a routerLink="/quiz-delete" [queryParams]="{id: quiz._id }" >Delete</a></div>
     </div>
     </div>
 </div>
